--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@headlessui/vue": "^1.7.23",
         "@inertiajs/vue3": "^2.0.12",
         "@vitejs/plugin-vue": "^5.2.4",
+        "chart.js": "^4.5.0",
         "date-fns": "^4.1.0",
         "vite-plugin-pwa": "^1.0.0",
         "vue-signature-pad": "^3.0.2",
