--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "test": "vitest --run",
+        "test:watch": "vitest",
+        "test:ui": "vitest --ui"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
+        "@vue/test-utils": "^2.4.6",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "jsdom": "^25.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
-        "vite": "^6.2.4"
+        "vite": "^6.2.4",
+        "vitest": "^2.1.8"
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
