--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
         "@inertiajs/vue3": "^2.0.12",
+        "@tiptap/extension-color": "^3.3.1",
+        "@tiptap/extension-highlight": "^3.3.1",
+        "@tiptap/extension-placeholder": "^3.3.1",
+        "@tiptap/extension-text-style": "^3.3.1",
+        "@tiptap/extension-underline": "^3.3.1",
+        "@tiptap/starter-kit": "^3.3.1",
+        "@tiptap/vue-3": "^3.3.1",
         "@vitejs/plugin-vue": "^5.2.4",
         "chart.js": "^4.5.0",
         "date-fns": "^4.1.0",
