feat: implement comprehensive frontend testing suite
- Add unit tests for Vue components (SignaturePad, KanbanBoard, NotificationPanel, etc.)
- Add integration tests for signature and mission workflows
- Add end-to-end tests for admin and checker user workflows
- Add mobile device testing for touch interactions and responsive design
- Add performance tests for dashboard loading and large datasets
- Create test configuration and utilities for consistent testing
- Add comprehensive test runner with detailed reporting
- Update package.json with new test scripts for different categories
- Add detailed testing documentation and best practices

Testing coverage includes:
- Component behavior and user interactions
- Multi-step workflows and API integration
- Touch events, gestures, and mobile responsiveness
- Performance measurement and memory management
- Error handling and edge cases
- Offline functionality and data persistence

Resolves task 15: Create Comprehensive Testing Suite

--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
         "dev": "vite",
         "test": "vitest --run",
         "test:watch": "vitest",
-        "test:ui": "vitest --ui"
+        "test:ui": "vitest --ui",
+        "test:unit": "vitest --run tests/js/Components/**/*.test.js",
+        "test:integration": "vitest --run tests/js/Integration/**/*.test.js",
+        "test:e2e": "vitest --run tests/js/E2E/**/*.test.js",
+        "test:mobile": "vitest --run tests/js/Mobile/**/*.test.js",
+        "test:performance": "vitest --run tests/js/Performance/**/*.test.js",
+        "test:comprehensive": "node tests/js/test-runner.js",
+        "test:coverage": "vitest --run --coverage"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
