--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
         "@vitejs/plugin-vue": "^5.2.4",
         "chart.js": "^4.5.0",
         "date-fns": "^4.1.0",
+        "flowbite": "^3.1.2",
+        "tw-elements": "^2.0.0",
         "vite-plugin-pwa": "^1.0.0",
         "vue-signature-pad": "^3.0.2",
         "ziggy-js": "^2.5.3"
