--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "jsdom": "^25.0.1",
+        "laravel-vite-plugin": "^2.0.1",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.2.4",
