Add simplified Dockerfile and update configs
Introduced Dockerfile.simple for a streamlined production build and updated docker-compose.yml to use it. Enhanced .claude/settings.local.json with additional allowed Bash commands. Updated Dockerfile to include build tools and removed health check. Changed npm install in Dockerfile.dev to use legacy peer deps for compatibility.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.simple
     container_name: bm-app
     restart: unless-stopped
     working_dir: /var/www/html
