--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,5 +1,5 @@
-# Multi-stage build for production
-FROM php:8.2-fpm-alpine AS backend
+# Simple production Dockerfile for BM application
+FROM php:8.2-fpm-alpine
 
 # Install system dependencies
 RUN apk update && apk add --no-cache \
@@ -17,15 +17,12 @@ RUN apk update && apk add --no-cache \
     icu-dev \
     postgresql-dev \
     nodejs \
-    npm \
-    autoconf \
-    build-base
+    npm
 
-# Install PHP extensions
+# Install PHP extensions (using docker-php-ext-install for available ones)
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg
 RUN docker-php-ext-install \
     pdo_mysql \
-    pdo_pgsql \
     zip \
     gd \
     xml \
@@ -33,9 +30,6 @@ RUN docker-php-ext-install \
     intl \
     opcache \
     exif
-
-# Install Redis extension
-RUN pecl install redis && docker-php-ext-enable redis
 
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
@@ -47,8 +41,8 @@ WORKDIR /var/www/html
 # Copy application files
 COPY . /var/www/html/
 
-# Install PHP dependencies
-RUN composer install --no-dev --optimize-autoloader --no-interaction
+# Install PHP dependencies (skip package discovery to avoid flare error)
+RUN composer install --no-dev --optimize-autoloader --no-interaction --no-scripts
 
 # Set permissions
 RUN chown -R www-data:www-data /var/www/html/storage
@@ -61,34 +55,8 @@ COPY docker/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY docker/nginx.conf /etc/nginx/nginx.conf
 COPY docker/php.ini /usr/local/etc/php/conf.d/custom.ini
 
-# Frontend build stage
-FROM node:22-alpine AS frontend
-
-WORKDIR /var/www/html
-
-# Copy package files
-COPY package*.json ./
-COPY vite.config.js ./
-
-# Install Node.js dependencies with legacy peer deps to resolve conflicts
-RUN npm ci --legacy-peer-deps
-
-# Copy source files
-COPY resources/ ./resources/
-COPY tailwind.config.js ./
-
-# Build assets
-RUN npm run build
-
-# Final production image
-FROM backend
-
-# Copy built assets from frontend stage
-COPY --from=frontend /var/www/html/public/build/ /var/www/html/public/build/
-
 # Expose port
 EXPOSE 9000
 
-
-# Start PHP-FPM and supervisor
-CMD ["supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
+# Start PHP-FPM directly
+CMD ["php-fpm"]
