--- a/.dockerignore
+++ b/.dockerignore
@@ -1,115 +1,13 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Production build
-public/build/
-
-# Environment files
-.env
-.env.production
-.env.local
-.env.*.local
-
-# Logs
-logs
-*.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env.test
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Storage
-storage/app/public/*
-!storage/app/public/.gitkeep
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Docker
-Dockerfile*
-docker-compose*
-.docker/
-
-# Temporary files
-tmp/
-temp/
-
-# Git
 .git
 .gitignore
-
-# Documentation
+.dockerignore
+node_modules
+.env
+docker-compose.yml
+docker-compose.dev.yml
+Dockerfile
+Dockerfile.dev
+Dockerfile.simple
 README.md
-
-# Project specific
-.kiro/
-.superdesign/
-deploy/
-
-# Archives
-*.tar.gz
-*.zip
-
-# Build directories
-dist/
-build/
+install.sh
+INSTALL.md
