--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite-plugin-minify": "^2.1.0"
     },
     "dependencies": {
+        "@alpinejs/focus": "^3.15.8",
         "flowbite": "^3.1.2",
         "signature_pad": "^5.1.1",
         "tw-elements": "^2.0.0"
